<resources xmlns:xliff="urn:oasis:name:tc:xliff:document:1.2">
    <string name="app_name">小宜管家(电子保修卡)</string>
    <string name="app_name_2014">小宜管家(电子保修卡) 2014</string>
    <string name="app_id">540fbabe</string>
    <string name="button_register">新用户注册</string>
    <string name="button_register_now">"马上注册"</string>
     <string name="button_find_password">找回密码</string>
    <string name="button_new_card">新建保修卡</string>
    <string name="button_edit_card">编辑保修卡</string>
    <string name="button_my_card">我的保修卡</string>
    <string name="button_repair">故障报修</string>
     <string name="button_webview_goback">回退</string>
    <string name="button_login">"登录"</string>
     <string name="button_close">关闭</string>
      <string name="button_save">保存</string>
       <string name="button_done">完成</string>
      <string name="button_next">下一步</string>
       <string name="button_confirm">新建保修卡</string>
    <string name="msg_unsupport_operation">暂未开放</string>
    <string name="msg_need_login_operation">请先登录</string>
    <string name="msg_need_home_operation">请先新建一个家</string>
     <string name="msg_no_sdcard">"未检测到SD卡,无法使用相机"</string>
     <string name="dialog_msg_media_unmounted">无法访问外置存储卡,请检查....</string>
      <string name="text_sms">发短信</string>
     <string name="text_call">打电话</string>
     <string name="text_flightno">查询航班号</string>
     <string name="tip_find_flightno">你的意思是航班 %s?</string>
     <string name="tip_find_train">你的意思是车次 %s?</string>
     <string name="text_train">查询车次信息</string>
     <string name="text_check_voice_title">请输入报修品牌/查询航班、高铁</string>
     <string name="text_check_voice_title_for_im_send">您是否确认发送如下内容</string>
      <string name="menu_picture_gallery">上传手机中的照片</string>
        <string name="menu_picture_camera">拍照上传</string>
        <string name="menu_bill_edit">拍摄发票</string>
       <string name="menu_bill_show">查看发票</string>
       <string name="menu_goods_preview">预览</string>
       <string name="menu_goods_capture">拍摄</string>
       <string name="title_scan_desc1">"扫描产品条码/二维码"</string>
       <string name="title_scan_desc2">获取产品信息</string>
       <string name="title_scan_button">开始扫描</string>
       <string name="title_my_product">我的家电</string>
       <string name="product_type">类型</string>
       <string name="product_brand">品牌</string>
       <string name="product_brand_full">品牌名称</string>
       <string name="product_model">型号</string>
       <string name="product_sn">商品编号</string>
       <string name="product_baoxiu_date">保修期(年)</string>
       <string name="product_beizhu">备注标签</string>
       <string name="product_time">保修期</string>
       <string name="product_yanbao_time">延保期</string>
       <string name="product_tel">客服电话</string>
       <string name="product_where">购买地点</string>
       <string name="product_bill">发票</string>
       <string name="product_buy_date">购买日期</string>
       <string name="product_buy_cost">购买价格</string>
       <string name="product_buy_entry">购买途径</string>
       <string name="product_buy_delay_time">延保时间</string>
       <string name="product_buy_delay_componey">延保单位</string>
       <string name="product_buy_delay_componey_tel">延保电话</string>
       <string name="product_baoxiu_date_tips">(请核实产品资料标注的保修期)</string>
       <string name="product_debug_placeholder">XXXXXXXX</string>
       <string name="product_bill_desc">请拍摄发票或收据，作为保修凭据</string>
        <string name="title_my_product_deadline">距离质保结束</string>
        <string name="product_deadline">距离质保结束</string>
    	<string name="title_my_product_repair">报修</string>
    	<string name="title_unit_day_format">"%s天"</string>
    	<string name="title_more_message">更多信息</string>
    	<string name="button_qa">常见问题</string>
    	<string name="button_call_repair">拨打维修电话</string>
    	<string name="button_ask_online">在线咨询</string>
    	<string name="button_speek">点击说话</string>
       <string name="usr_name">用户名</string>
       <string name="usr_pwd">"密    码"</string>
       <string name="usr_repwd">确认密码</string>
       <string name="usr_tel">手机号</string>
       <string name="usr_validate">验证码</string>
       <string name="usr_name_hint">输入你的用户名</string>
       <string name="usr_pwd_hint">输入你的密码</string>
       <string name="usr_repwd_hint">请再次输入你的密码</string>
       <string name="usr_tel_hint">输入你的手机号</string>
    <string name="activity_title_choose_homecommunity">选择小区所在家</string>
    <string name="activity_title_choose_community">选择家所在小区</string>
     <string name="activity_title_my_homecommunity">我的小区</string>
    <string name="activity_title_choose_device_general">家当清单</string>
    <string name="activity_title_choose_device_card">选择设备</string>
    <string name="activity_title_choose_device_install">请先选择你要预约安装的产品</string>
    <string name="activity_title_choose_device_repair">请先选择你要预约维修的产品</string>
    <string name="activity_title_repair">电子报修单</string>
    <string name="activity_title_install">预约安装</string>
    <string name="activity_title_choose_device_feedback">选择设备</string>
    <string name="title_over_deadline">过保</string>
    <string name="title_login">用户登录</string>
    <string name="title_new_user_register">新用户注册</string>
    <string name="title_user_info_security_confirm">安全确认</string>
    <string name="product_deadline_placeholder">999天</string>
    <string name="menu_more">更多</string>
    <string name="menu_login">登录</string>
    <string name="menu_exit">退出</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_register">注册</string>
    <string name="menu_setting">设置</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about">关于</string>
    <string name="menu_search">搜索</string>
    <string name="menu_done">完成</string>
    <string name="menu_choose">选择</string>
    <string name="menu_back">"返回"</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_edit_for_delete">删除</string>
    <string name="menu_delete">删除</string>
	<string name="menu_create">新建</string>
	<string name="menu_save">保存</string>
    <string name="register_tips">输入手机号码，点击“获取验证码”后，系统会自动下发一条默认密码短信</string>
    <string name="title_get_usr_validate">获取验证码</string>
    <string name="title_agree_protocol">同意，注册协议</string>
    <string name="address">详细地址</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="name">"姓    名"</string>
    <string name="button_register_confirm">确认注册</string>
    <string name="input_province_tips">请先选择省份</string>
    <string name="input_city_tips">请先选择城市</string>
    <string name="choose_address">选择地址</string>
    <string name="msg_tip_title">提示信息</string>
    <string name="input_home_place_detail_tips">为方便为您提供便捷的安装维修服务，请您填写详细地址。</string>
    <string name="msg_register_save_fail">注册成功，但无法创建账户，请尝试重新登录</string>
    <string name="msg_progressdialog_wait">操作处理中，请稍后....</string>
    <string name="msg_input_usrtel_password">请输入你的手机号和密码</string>
    <string name="my_home_name">家的名字</string>
    <string name="my_home">我的家</string>
    <string name="hint_input_home_name">输入家名称</string>
    <string name="parent_home">父母家</string>
    <string name="parent_home2">岳父母家</string>
    <string name="address_pcs">省/市</string>
    <string name="button_confirm_ok">确认</string>
    <string name="people_info">联系人信息</string>
    <string name="yuyue_time">预约时间</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="error_des">故障描述</string>
    <string name="button_yuyue_repair">预约</string>
    <string name="start_speak">开始说话</string>
    <string name="end_speak">结束说话</string>
    <string name="speak_tips">当前正在说话，音量大小：</string>
    <string name="login_fail">登录失败</string>
    <string name="title_login_confirm">选择地址</string>
  <string name="msg_login_confirm_success">登录成功，现在可以开始使用本软件了</string>
  <string name="msg_login_save_success">账户初始化失败，请再次尝试...</string>
  <string name="msg_login_dialog_title_wait">正在登录...</string>
   <string name="msg_update_dialog_title_wait">正在更新...</string>
  <string name="msg_login_download_accountinfo_wait">正在载入账户信息....</string>
  <string name="msg_login_download_addressinfo_wait">正在载入家信息....</string>
  <string name="msg_login_download_baoxiuinfo_wait">正在载入保修卡信息....</string>
  <string name="msg_op_canceled">操作取消</string>
  <string name="msg_op_successed">操作成功</string>
   <string name="msg_op_failed">操作失败</string>
  <string name="button_re_vali">重新验证</string>
  <string name="second">倒计时%1$s秒</string>
    <string name="msg_input_usrtel">请输入你的手机号码</string>
    <string name="msg_input_usrtel_invalid">请输入有效的11位手机号码</string>
    <string name="msg_input_yanzheng_code">请输入验证码</string>
    <string name="msg_input_yanzheng_code_check_net">获取验证码失败，请检查你的网络连接</string>
    <string name="msg_yanzheng_code_msg_send">短信已下发，请稍后</string>
    <string name="msg_yanzheng_code_msg_has_registered">该手机号码已经注册，可以直接登录或是找回密码.</string>
    <string name="msg_input_yanzheng_code_error">验证码输入有误，请重新输入</string>
    <string name="msg_input_usr_name">请输入姓名</string>
    <string name="msg_input_usr_pro">请输入省份</string>
         <string name="preference_key_account_title">账户设置</string>
         <string name="preference_key_account_name_title">修改用户名</string>
         <string name="preference_key_account_nickname_title">修改昵称</string>
         <string name="preference_key_account_nickname_summary">昵称将用作留言互动时使用，默认是你的用户名</string>
         <string name="preference_key_account_password_title">修改账户密码</string>
         <string name="button_malfunction">故障报修</string>
         <string name="button_maintenance_componnet">购买维修配件</string>
         <string name="button_maintenance_point">附近维修点</string>
         <string name="repair_yuyue">维修预约</string>
         <string name="install_yuyue">安装预约</string>
         <string name="maintenance_yuyue">保养预约</string>
           <string name="title_im_conversation">会话</string>
           <string name="ic_button_im">咨询</string>
           <string name="ic_button_notification">广播</string>
           <string name="ic_button_maintenance">查单</string>
           <string name="ic_button_scan">扫码</string>
           <string name="ic_button_remote">遥控</string>
		<string name="car_product_pinpai">品牌</string>
		<string name="car_product_xinghao">汽车型号</string>
       <string name="car_product_chepai">车牌号码</string>
       <string name="car_product_chejia">车架编号</string>
       <string name="car_product_fadongji">发动机号</string>
       <string name="car_product_tel">厂家电话</string>
  <string name="preferences_privacy_category_title">隐私设置</string>
  <string name="preferences_privacy_category_summary">注册用户可以将商家添加至会员卡，非注册用户可以快速保存商家到通讯录</string>
  <string name="preferences_privacy_incoming_call_title">来电提醒</string>
  <string name="preferences_privacy_incoming_call_summary">当有未保存商铺号码呼入时，该功能将显示商铺信息并可添加至会员卡。</string>
  <string name="preferences_privacy_outgoing_call_title">去电提醒</string>
  <string name="preferences_privacy_outgoing_call_summary">当呼叫未保存的商铺号码时，该功能将显示商铺信息并可添加至会员卡。</string>
  <string name="preferences_barcode_general_title">条码识别类型</string>
  <string name="preferences_decode_1D_title">解码一维条码</string>
  <string name="preferences_decode_1D_summary">主要用于物流信息系统，大多数商品也都采用这种编码</string>
  <string name="preferences_decode_QR_title">解码QR条码</string>
  <string name="preferences_decode_QR_summary">一种二维码，使用的越来越普遍，相对传统的一维码有很多优势</string>
  <string name="preferences_decode_Data_Matrix_title">数据矩阵码解码</string>
  <string name="preferences_decode_Data_Matrix_summary">矩阵式二维条码，尺寸最小，适用于小零件的标识</string>
  <string name="preferences_general_category_title">通用设置</string>
  <string name="preferences_about_app_title">关于</string>
  <string name="preferences_clear_cache_title">清空缓存</string>
  <string name="bx_order_apply_time">"申请时间: "</string>
  <string name="bx_order_product_type">"产品类别: %s"</string>
  <string name="bx_order_product_xinghao">"产品型号: %s"</string>
  <string name="bx_order_server_type">"产品品牌: %s"</string>
  <string name="bx_order_status">"当前状态: "</string>
  <string name="button_evaluate">"服务\n评价"</string>
</resources>