<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dip"
    android:paddingRight="10dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip" >
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bx_order_apply_time"
            android:textColor="#ff5a5a5a"
            android:textSize="13sp"/>
        <TextView android:id="@+id/bx_order_apply_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bx_order_apply_time"
            android:textColor="#ff5a5a5a"
            android:layout_marginLeft="4dip"
            android:textSize="13sp"/>
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dip">
        
        <LinearLayout 
            android:layout_width="0dip"
	        android:layout_weight="1.0"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <TextView android:id="@+id/bx_order_product_type"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/bx_order_product_type"
	            android:textColor="#ff5a5a5a"
	            android:textSize="13sp"/>
	        
	        <TextView android:id="@+id/bx_order_server_type"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="6dip"
	            android:text="@string/bx_order_server_type"
	            android:textColor="#ff5a5a5a"
	            android:textSize="13sp"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="0dip"
	        android:layout_weight="1.0"
	        android:layout_marginLeft="4dip"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <TextView android:id="@+id/bx_order_product_xinghao"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/bx_order_product_xinghao"
	            android:textColor="#ff5a5a5a"
	            android:textSize="13sp"/>
	        
	        <TextView android:id="@+id/bx_order_status"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/bx_order_status"
	            android:textColor="#ff5a5a5a"
	            android:layout_marginTop="6dip"
	            android:textSize="13sp"/>
        </LinearLayout>
        
        <Button android:id="@+id/button_evaluate"
            android:background="@drawable/default_rounded_rectangle_blue_btn"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:textSize="12sp"
            android:visibility="gone"
            android:textColor="@color/wt"
            android:text="@string/button_evaluate"/>
        
    </LinearLayout>

</LinearLayout>
