<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" >
    </FrameLayout>

    <com.actionbarsherlock.internal.widget.IcsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_button_bottom_bg"
        android:divider="@drawable/linearlayout_divider"
        android:dividerPadding="10dip"
        android:padding="6dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/detail_card_view_padding"
        android:paddingRight="@dimen/detail_card_view_padding"
        android:showDividers="middle"
        android:weightSum="4" >

        <TextView
            android:id="@+id/button_new_card"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:drawableTop="@drawable/ic_button_notification"
            android:text="@string/ic_button_notification"
            android:textColor="#ffffffff"
            android:drawablePadding="4dip"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/button_im"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="4dip"
            android:drawableTop="@drawable/ic_button_im"
            android:gravity="center"
            android:text="@string/ic_button_im"
            android:textColor="#ffffffff"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/button_maintenance"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:drawableTop="@drawable/ic_button_maintenance"
            android:text="@string/ic_button_maintenance"
            android:textColor="#ffffffff"
            android:drawablePadding="4dip"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/button_scan"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:drawableTop="@drawable/ic_button_scan"
            android:text="@string/ic_button_scan"
            android:textColor="#ffffffff"
            android:drawablePadding="4dip"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/button_remote"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/ic_button_remote"
            android:drawableTop="@drawable/ic_button_remote"
            android:textColor="#ffffffff"
            android:drawablePadding="4dip"
            android:textSize="16sp" />
    </com.actionbarsherlock.internal.widget.IcsLinearLayout>

</LinearLayout>